--- a/s.yaml
+++ b/s.yaml
@@ -17,11 +17,11 @@ services:
     actions:
       pre-deploy: # 在deploy之前运行
         - run: npm install  # 要执行的系统命令，类似于一种钩子的形式
-          path: ./ # 执行系统命令/钩子的路径
+          path: ./code # 执行系统命令/钩子的路径
 
       post-deploy: # 在deploy之后运行
-        - run: npm run start
-          path: ./
+        - run: node app.js
+          path: ./code
     props:
       region: ${vars.region}
       service: ${vars.service}
