--- a/s.yaml
+++ b/s.yaml
@@ -17,11 +17,9 @@ services:
     actions:
       pre-deploy: # 在deploy之前运行
         - run: npm install  # 要执行的系统命令，类似于一种钩子的形式
-          path: ./code # 执行系统命令/钩子的路径
-
-      post-deploy: # 在deploy之后运行
+          path: ./ # 执行系统命令/钩子的路径
         - run: node app.js
-          path: ./code
+          path: ./  # 命令行运行的路径
     props:
       region: ${vars.region}
       service: ${vars.service}
@@ -29,7 +27,7 @@ services:
         name: "web-music"
         description: 'Serverless Devs Web Framework Function'
         runtime: nodejs14
-        codeUri: ./code
+        codeUri: ./
         handler: index.handler
         memorySize: 256
         timeout: 60
