--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "public"
   ],
   "dependencies": {
+    "@serverless-devs/fc-http": "^1.0.1",
     "axios": "^0.24.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.9",
