--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NeteaseCloudMusicApi",
+  "name": "netease-cloud-music-api",
   "version": "4.6.7",
   "description": "网易云音乐 NodeJS 版 API",
   "scripts": {
