--- a/s.yaml
+++ b/s.yaml
@@ -16,7 +16,7 @@ services:
     component: fc
     actions:
       pre-deploy: # 在deploy之前运行
-        - run: npm install  # 要执行的系统命令，类似于一种钩子的形式
+        - run: npm install --production  # 要执行的系统命令，类似于一种钩子的形式
           path: ./ # 执行系统命令/钩子的路径
     props:
       region: ${vars.region}
