--- a/s.yaml
+++ b/s.yaml
@@ -7,7 +7,7 @@ access: "music"
 vars: # 全局变量
   region: "cn-beijing"
   service:
-    name: "web-music"
+    name: "web-music-server"
     description: 'Serverless Devs Web Framework Service'
 
 
@@ -16,19 +16,21 @@ services:
     component: fc
     actions:
       pre-deploy: # 在deploy之前运行
-        - run: npm install --production  # 要执行的系统命令，类似于一种钩子的形式
+        - run: npm cache clear --force
+        - path: ./
+        - run: npm install  # 要执行的系统命令，类似于一种钩子的形式
           path: ./ # 执行系统命令/钩子的路径
     props:
       region: ${vars.region}
       service: ${vars.service}
       function:
-        name: "web-music"
+        name: "web-music-api"
         description: 'Serverless Devs Web Framework Function'
         runtime: nodejs14
         codeUri: ./
         handler: index.handler
         memorySize: 256
-        timeout: 60
+        timeout: 120
         caPort: 3000
       triggers:
         - name: httpTrigger
